[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-act-audit"
version = "0.1.0"
description = "Outil d'audit de conformité AI Act pour systèmes d'intelligence artificielle"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "reportlab>=4.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
ai-act-audit = "ai_act_audit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ai_act_audit"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
